SERVER-31787: Certain aggregation commands with merging on mongos can leak cursors on mongod